# viscloudio

./: .cz.yaml  .gitignore  .pre-commit-config.yaml  .pre-commit-hooks.yaml  CHANGELOG.md  LICENSE  Makefile  README.md  conf.py  genindex.html  index.html  index.rst  make.bat  objects.inv  py-modindex.html  pyproject.toml  search.html  searchindex.js  sphinx_make.bat
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: bumpversion.yml  ci.yml  coco.yml  docs.yml  qa.yml  release.yml
_static/: bizstyle.js
assets/shaders/: steam.ptf
docs/: CONTRIBUTING.md  Makefile  conf.py  index.rst  make.bat
source/: conf.py  index.rst
source/viscloudio/: __init__.py  particles.coco
src/: conf.py
src/_autosummary/: viscloudio.particles.rst
src/viscloudio/: __coconut__.py  __init__.py  particles.coco  particles.py
tests/: test_clouds.py
