[tool.poetry]
name = "viscloudio"
version = "0.0.1"
description = ""
authors = ["Brighten Tompkins <brightenqtompkins@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "3.6.15"
Panda3D = "^1.10.10"
renku-sphinx-theme = "^0.2.2"
scipy = "^1.7.3"
matplotlib = "^3.5.0"
coconut = "^1.6.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
